Force GitHub Pages refresh
- Add comment to trigger deployment
- Ensure relative API links are properly deployed

--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,7 @@ data = response.json()</code></pre>
 
     <footer style="margin-top: 3rem; padding-top: 2rem; border-top: 1px solid #eee; text-align: center; color: #666;">
         <p>🦡 Generated automatically for Badger 2040 W development</p>
+        <!-- Force GitHub Pages refresh: 2025-06-06 -->
     </footer>
 
     <script>
